fdo#74322: Handle moving of named ranges correctly.

But named ranges are adjusted if and only if the references are absolute.

Change-Id: I6c5287b413884b045f1a798c6c6683aa17863f24